--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,35 @@
-# build output
-dist/
-
-# generated types
-.astro/
-
-# dependencies
-node_modules/
-
-# logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# environment variables
-.env
-.env.production
-
-# macOS-specific files
-.DS_Store
-
-# jetbrains setting folder
+# build output  
+dist/  
+  
+# generated types  
+.astro/  
+.codesandbox/  
+.bolt/  
+.vscode/  
+.claude/  
+  
+venv/  
+build/  
+  
+# dependencies  
+node_modules/  
+  
+# logs  
+npm-debug.log*  
+yarn-debug.log*  
+yarn-error.log*  
+pnpm-debug.log*  
+  
+# environment variables  
+.env  
+.env.production  
+  
+# macOS-specific files  
+.DS_Store  
+*.swp      
+*.log      
+*.tmp      
+*.bak      
+  
+# jetbrains setting folder  
 .idea/
